# lotr-plan

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  pyproject.toml  run_server.sh  settings.py  wait_for_db.sh
CSV/: characters.csv
alembic/: env.py
alembic/versions/: 2023_08_30_0939-ed534e8eccbb_added_characters_table.py  2023_08_30_1006-e9d6caafa0e1_initial_migration.py
app/: main.py
app/api/: api.py
app/api/endpoints/: characters.py
app/db/models/: characters.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.js  Characters.js  Header.js  Main.js  Navbar.js
